# playground-ai

./: .gitignore  README.md  pyproject.toml  temperature-top-k.ipynb
customer-classifier/: Identify_Customer_Segments.ipynb
data-wrangling/: data_wrangling_project.ipynb
donors/: finding_donors.ipynb  report.html
image-classifier/: cat_to_name.json  flowers.html  flowers.ipynb  predict.py  train.py  utils.py
image-classifier-2/: CIFAR-10_Image_Classifier-STARTER.ipynb  CIFAR.ipynb
notebooks/: backpropagation.ipynb  backpropagation_data_prep.py  hugging-face.ipynb
