[project]
name = "playground-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]
